[tool.poetry]
name = "kuflow-sdk-python"
version = "1.1.5"
description = "KuFlow packages to build awesome clients"
license = "MIT"
authors = ["KuFlow S.L. <kuflow@kuflow.com>"]
homepage = "https://kuflow.com/"
documentation = "https://docs.kuflow.com/"
repository = "https://github.com/kuflow/kuflow-sdk-python"
readme = "README.md"
include = ["VERSION", "README.md"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
kuflow-rest = { path = "./kuflow-rest", develop = true }
kuflow-robotframework = { path = "./kuflow-robotframework", develop = true }
kuflow-temporal-common = { path = "./kuflow-temporal-common", develop = true }
kuflow-temporal-activity-kuflow = { path = "./kuflow-temporal-activity-kuflow", develop = true }
kuflow-temporal-activity-robotframework = { path = "./kuflow-temporal-activity-robotframework", develop = true }

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
ruff = ">=0.1.8,<1.0.0"
pytest = "^7.3.1"
pyyaml = "^6.0"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
python_files = "test_*.py"

[tool.ruff]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "C",  # flake8-comprehensions
  "B",  # flake8-bugbear
  "UP", # pyupgrade
]
ignore = [
  "B008", # do not perform function calls in argument defaults
  "C901", # too complex
]
line-length = 120

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["kuflow_*"]
