[project]
name = "kuflow-sdk-python"
description = "KuFlow packages to build awesome clients"
license = "MIT"
readme = "README.md"
authors = [{name = "KuFlow S.L.", email = "kuflow@kuflow.com"}]
dynamic = ["version", "dependencies"]
requires-python = '>=3.9,<4.0'

[project.urls]
homepage = "https://kuflow.com/"
repository = "https://github.com/kuflow/kuflow-sdk-python"
documentation = "https://docs.kuflow.com/"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
version = "3.2.1.dev0"
include = ["VERSION", "README.md"]
package-mode = false
requires-poetry = '>=2.0,<3.0'

[tool.poetry.dependencies]
kuflow-rest = { path = "./kuflow-rest", develop = true }
kuflow-robotframework = { path = "./kuflow-robotframework", develop = true }
kuflow-temporal-common = { path = "./kuflow-temporal-common", develop = true }
kuflow-temporal-activity-kuflow = { path = "./kuflow-temporal-activity-kuflow", develop = true }
kuflow-temporal-activity-robotframework = { path = "./kuflow-temporal-activity-robotframework", develop = true }
kuflow-temporal-workflow-kuflow = { path = "./kuflow-temporal-workflow-kuflow", develop = true }
kuflow-temporal-worker = { path = "./kuflow-temporal-worker", develop = true }
kuflow-temporal-sample = { path = "./kuflow-temporal-sample", develop = true }

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
ruff = ">=0.1.8,<1.0.0"
pytest = "^8.3.2"
pyyaml = "^6.0"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
python_files = "test_*.py"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "C",  # flake8-comprehensions
  "B",  # flake8-bugbear
  "UP", # pyupgrade
]
ignore = [
  "B008", # do not perform function calls in argument defaults
  "C901", # too complex
]
exclude = [
  "kuflow-rest/kuflow_rest/_generated"
]

[tool.ruff.lint.per-file-ignores]
"kuflow-rest/kuflow_rest/_generated/*" = [
  "B018",  # Found useless expression. Either assign it to a variable or remove it.
  "B904",  # Within an `except` clause, raise exceptions with
  "C408",  # "Unnecessary {obj_type} call (rewrite as a literal)"
  "E501",  # Line too long
  "E722",  # "Do not use bare except"
  "E721",  # "Use `is` and `is not` for type comparisons, or `isinstance()` for isinstance checks"
  "E731",  # "Do not assign a lambda expression, use a def"
  "F403",  # Use a dictionary comprehension instead of a for-loop
  "F811",  # Redefinition of unused {name} from line
  "I001",  # Import block is un-sorted or un-formatted
  "UP004", # Class `Model` inherits from `object`
  "UP006", # Use `dict` instead of `Dict` for type annotation
  "UP009", # UTF-8 encoding declaration is unnecessary
  "UP031", # Use format specifiers instead of percent format
  "UP032", # Use f-string instead of `format` call
  "UP035", # `typing.Dict` is deprecated, use `dict` instead
  "UP036", # Version block is outdated for minimum Python version
]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["kuflow_*", "._patch"]
