[tool.poetry]
name = "kuflow-rest"
version = "1.1.1"
description = "Client for KuFlow Rest Api"
license = "MIT"
authors = ["KuFlow S.L. <kuflow@kuflow.com>"]
homepage = "https://kuflow.com/"
documentation = "https://docs.kuflow.com/"
repository = "https://github.com/kuflow/kuflow-sdk-python"
readme = "README.md"
include = ["VERSION", "README.md", "CHANGELOG.md"]
packages = [{ include = "kuflow_rest" }]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
azure-core = "^1.29.3"
isodate = "^0.6.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
flake8 = "^5.0.4"
black = "^23.3.0"
pytest = "^7.3.1"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
testpaths = ["tests"]
python_files= "test_*.py"

[tool.black]
line-length = 120
target-version = ["py38", "py39"]
