[tool.poetry]
name = "kuflow-rest"
version = "1.1.5"
description = "Client for KuFlow Rest Api"
license = "MIT"
authors = ["KuFlow S.L. <kuflow@kuflow.com>"]
homepage = "https://kuflow.com/"
documentation = "https://docs.kuflow.com/"
repository = "https://github.com/kuflow/kuflow-sdk-python"
readme = "README.md"
include = ["VERSION", "README.md", "CHANGELOG.md"]
packages = [{ include = "kuflow_rest" }]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
azure-core = "^1.29.3"
isodate = "^0.6.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
ruff = ">=0.1.8,<1.0.0"
pytest = "^7.3.1"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff.lint]
exclude = [
  "_generated"
]

[tool.ruff.per-file-ignores]
"kuflow_rest/_generated/*" = [
  "F811",  # Redefinition of unused {name} from line
  "E722",  # "Do not use bare except"
  "C408",  # "Unnecessary {obj_type} call (rewrite as a literal)"
  "E731",  # "Do not assign a lambda expression, use a def"
  "F403",  # Use a dictionary comprehension instead of a for-loop
]
