[tool.poetry]
name = "kuflow-robotframework"
version = "0.4.0"
description = "KuFlow library for Robot Framework"
license = "MIT"
authors = ["KuFlow S.L. <kuflow@kuflow.com>"]
homepage = "https://kuflow.com/"
documentation = "https://docs.kuflow.com/"
repository = "https://github.com/kuflow/kuflow-sdk-python"
readme = "README.md"
include = ["VERSION", "README.md", "CHANGELOG.md"]
packages = [{ include = "KuFlow" }]


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
kuflow-rest = "^0.4.0.dev3"
robotframework = "^5.0"
python-magic = "^0.4.27"

[tool.poetry.group.dev.dependencies]
mypy = "0.910"
flake8 = "4.0.1"
black = "^23.1.0"
pytest = "^7.2.1"
robotframework-tidy = "^3.3.3"

[tool.black]
line-length = 120
target-version = ["py38", "py39"]
