[tool.poetry]
name = "kuflow-robotframework"
version = "2.1.0"
description = "KuFlow library for Robot Framework"
license = "MIT"
authors = ["KuFlow S.L. <kuflow@kuflow.com>"]
homepage = "https://kuflow.com/"
documentation = "https://docs.kuflow.com/"
repository = "https://github.com/kuflow/kuflow-sdk-python"
readme = "README.md"
include = ["VERSION", "README.md", "CHANGELOG.md"]
packages = [{ include = "KuFlow" }]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
kuflow-rest = {path="../kuflow-rest", develop=true}
robotframework = ">5.0.0"
python-magic = {version = "^0.4.27", platform = "!=win32"}
python-magic-bin = {version = "^0.4.14", platform = "win32"}

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
ruff = ">=0.1.8,<1.0.0"
pytest = "^8.3.2"
robotframework-tidy = "^3.3.3"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
python_files= "test_*.py"

