[project]
name = "kuflow-robotframework"
description = "KuFlow library for Robot Framework"
license = "MIT"
readme = "README.md"
authors = [{name = "KuFlow S.L.", email = "kuflow@kuflow.com"}]
dynamic = ["version", "dependencies"]
requires-python = '>=3.9,<4.0'

[project.urls]
homepage = "https://kuflow.com/"
repository = "https://github.com/kuflow/kuflow-sdk-python"
documentation = "https://docs.kuflow.com/"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
version = "3.1.0"
include = ["VERSION", "README.md", "CHANGELOG.md"]
packages = [{ include = "KuFlow" }]
requires-poetry = '>=2.0,<3.0'

[tool.poetry.dependencies]
kuflow-rest = {path="../kuflow-rest", develop=true}
robotframework = ">5.0.0"
python-magic = {version = "^0.4.27", platform = "!=win32"}
python-magic-bin = {version = "^0.4.14", platform = "win32"}

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
ruff = ">=0.1.8,<1.0.0"
pytest = "^8.3.2"
robotframework-tidy = "^3.3.3"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
python_files= "test_*.py"
