[project]
name = "kuflow-temporal-activity-robotframework"
description = "KuFlow SDK :: Temporal.io activities to execute Robot Frameworks tasks"
license = "MIT"
readme = "README.md"
authors = [{name = "KuFlow S.L.", email = "kuflow@kuflow.com"}]
dynamic = ["version", "dependencies"]
requires-python = '>=3.9,<4.0'

[project.urls]
homepage = "https://kuflow.com/"
repository = "https://github.com/kuflow/kuflow-sdk-python"
documentation = "https://docs.kuflow.com/"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
version = "3.1.1.dev0"
include = ["VERSION", "README.md", "CHANGELOG.md"]
packages = [{ include = "kuflow_temporal_activity_robotframework" }]
requires-poetry = '>=2.0,<3.0'

[tool.poetry.dependencies]
kuflow-temporal-common = {path="../kuflow-temporal-common", develop=true}
robotframework = ">5.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
ruff = ">=0.1.8,<1.0.0"
pytest = "^8.3.2"
robotframework-tidy = "^3.3.3"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
python_files= "test_*.py"
