[tool.poetry]
name = "kuflow-temporal-common"
version = "0.4.5"
description = "KuFlow utilities to use Temporal.io"
license = "MIT"
authors = ["KuFlow S.L. <kuflow@kuflow.com>"]
homepage = "https://kuflow.com/"
documentation = "https://docs.kuflow.com/"
repository = "https://github.com/kuflow/kuflow-sdk-python"
readme = "README.md"
include = ["VERSION", "README.md", "CHANGELOG.md"]
packages = [{ include = "kuflow_temporal_common" }]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
kuflow-rest = {path="../kuflow-rest", develop=true}
azure-core = "^1.26.3"
isodate = "^0.6.1"
temporalio = "^1.1.0"

[tool.poetry.group.dev.dependencies]
mypy = "0.910"
flake8 = "4.0.1"
black = "^23.1.0"
pytest = "^7.2.1"

[tool.black]
line-length = 120
target-version = ["py38", "py39"]
