[tool.poetry]
name = "kuflow-temporal-sample"
version = "2.1.0"
description = "KuFlow samples"
license = "MIT"
authors = ["KuFlow S.L. <kuflow@kuflow.com>"]
homepage = "https://kuflow.com/"
documentation = "https://docs.kuflow.com/"
repository = "https://github.com/kuflow/kuflow-sdk-python"
readme = "README.md"
include = ["VERSION", "README.md", "CHANGELOG.md"]
packages = [{ include = "kuflow_temporal_sample" }]
classifiers = ["Private :: Do not Upload"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
kuflow-rest = {path="../kuflow-rest", develop=true}
kuflow-temporal-common = {path="../kuflow-temporal-common", develop=true}
kuflow-temporal-activity-kuflow = {path="../kuflow-temporal-activity-kuflow", develop=true}
kuflow-temporal-workflow-kuflow = {path="../kuflow-temporal-workflow-kuflow", develop=true}
kuflow-temporal-worker = {path="../kuflow-temporal-worker", develop=true}

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
ruff = ">=0.1.8,<1.0.0"
pytest = "^8.3.2"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
python_files= "test_*.py"
